syntax = "proto3";
option go_package = "./;pb";
package pb;

import "google/protobuf/wrappers.proto";

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string salt = 4;
  string first_name = 5;
  string last_name = 6;
}

message UserList { repeated User users = 1; }

service AccountService {
  rpc CreateUser(User) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc GetUserByID(google.protobuf.StringValue) returns (User);
  rpc GetUserByEmail(google.protobuf.StringValue) returns (User);
}